# internal/db/models.go
@@ -3,16 +3,3 @@
 //   sqlc v1.31.1
 
 package db
-
-import (
-	"time"
-
-	"github.com/google/uuid"
-)
-
-type Item struct {
-	ID        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
-}
